--- a/package.json
+++ b/package.json
@@ -1,48 +1,36 @@
 {
-  "name": "server.admin.dashboard",
+  "name": "server",
   "version": "1.0.0",
-  "description": "This is a rest api server for an admin panel. For managing customer/leads.",
-  "main": "src/Server.ts",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r esm src/Server.ts",
-    "start": "node dist/src/Server.js"
+    "dev": "nodemon ./src/Server.ts",
+    "start": "node ./dist/src/Server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sunilgawai/server.admin.panel.git"
-  },
-  "keywords": [
-    "Admin",
-    "Dashboard"
-  ],
-  "author": "Sunil Gawai.",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sunilgawai/server.admin.panel/issues"
-  },
-  "homepage": "https://github.com/sunilgawai/server.admin.panel#readme",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
-    "@types/esm": "^3.2.0",
     "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/morgan": "^1.9.4",
-    "@types/node": "^20.4.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.0.1",
-    "prisma": "^4.16.2",
+    "@types/node": "^20.3.2",
+    "nodemon": "^2.0.22",
+    "prisma": "^4.16.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "esm": "^3.2.25",
     "express": "^4.18.2",
     "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.1"
+    "jsonwebtoken": "^9.0.0"
   }
 }
