--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,15 +24,15 @@
     /* Modules */
     "module": "commonjs", /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
-    "moduleResolution": "Node16",                     /* Specify how TypeScript looks up a file from a given module specifier. */
+    "moduleResolution": "Node16", /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     "typeRoots": [
-      "./src"
+      "./"
     ], /* Specify multiple folders that act like './node_modules/@types'. */
     "types": [
-      "./index"
+      "./index.d.ts"
     ], /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
